# pneumonia-predictor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  experiment.ipynb  index.html  main.ipynb  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  scratch.ipynb  test_train_diabetes.ipynb  training.ipynb
.github/workflows/: sync.yml
about/about-the-project/: index.html
about/license/: index.html
api-reference/: index.html
api-reference/rf-active-smote/: index.html
api-reference/rf-smote/: index.html
datasets/: X_test.csv  X_train.csv  diabetes.csv  pneumonia_sample.csv  y_test.csv  y_train.csv
docs/: api-reference.md  index.md
docs/about/: about-the-project.md  license.md
docs/api-reference/: index.md  rf-active-smote.md  rf-smote.md
docs/getting-started/: model-usage.md  setup.md
getting-started/model-usage/: index.html
getting-started/setup/: index.html
pneumonia_predictor/: config.py  train.py
pneumonia_predictor/backend/: active_smote.py  data_fetcher.py  data_transformer.py  logger.py  rf_active_smote.py  rf_smote.py  tester.py  utils.py
pneumonia_predictor/frontend/: components.py  utils.py
pneumonia_predictor/frontend/html/: description.html  header.html
pneumonia_predictor/frontend/pages/: about.md  local_setup.md
saved_models/: pneumonia_predictor.pkl  pneumonia_predictor_rfsmote.pkl
search/: search_index.json
