[tool.poetry]
name = "pneumonia-predictor"
version = "0.0.1"
description = ""
authors = ["Datsudo <76833632+datsudo@users.noreply.github.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
imbalanced-learn = "^0.12.3"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"
joblib = "^1.4.2"
scipy = "^1.14.1"
mkdocs-material = "^9.5.40"
altair = "^5.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.5"
ipykernel = "^6.29.5"
patool = "^3.0.0"
pyarrow = "^17.0.0"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
